# LinearAdvection

./: CMakeLists.txt  README.md
include/: cudpp_library.h  linear_advection.cuh  linear_advection_kernels.cuh  params.h  recorders.h  util.h
src/: linear_advection_kernels.cu  main.cu  util.cpp
